force-app/main/default/objects/Contrato_Padrao__c/Contrato_Padrao__c.object-meta.xml
<CustomObject>
    <description>Biblioteca de modelos padrao de contrato para geracao dos contratos por oportunidade.</description>
    <label>Contrato Padrao</label>
    <nameField>
        <label>Nome do Modelo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contratos Padrao</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>