force-app/main/default/objects/Contrato_Padrao__c/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indica se o contrato padrao pode ser utilizado para criacao de contratos.</description>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>