force-app/main/default/objects/Contrato_Padrao__c/fields/Cabecalho_Padrao__c.field-meta.xml
<CustomField>
    <fullName>Cabecalho_Padrao__c</fullName>
    <description>Conteudo do cabecalho padrao do contrato.</description>
    <label>Cabecalho Padrao</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>