force-app/main/default/objects/Contrato_Padrao__c/fields/Rodape_Padrao__c.field-meta.xml
<CustomField>
    <fullName>Rodape_Padrao__c</fullName>
    <description>Conteudo do rodape padrao do contrato.</description>
    <label>Rodape Padrao</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>