force-app/main/default/objects/Contrato_Padrao__c/fields/Servico_Origem__c.field-meta.xml
<CustomField>
    <fullName>Servico_Origem__c</fullName>
    <description>Servico da oportunidade usado para sugerir este modelo padrao.</description>
    <label>Servico de Origem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monitoramento Remoto</fullName>
            </value>
            <value>
                <fullName>Assist. TÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â©c. em Processo Judicial</fullName>
                <label>Assist. Tec. em Processo Judicial</label>
            </value>
            <value>
                <fullName>ElaboraÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â§ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â£o de Parecer TÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â©cnico</fullName>
                <label>Elaboracao de Parecer Tecnico</label>
            </value>
            <value>
                <fullName>DiagnÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â³stico de Contrato</fullName>
                <label>Diagnostico de Contrato</label>
            </value>
            <value>
                <fullName>DiagnÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â³stico + Pleito</fullName>
                <label>Diagnostico + Pleito</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>