force-app/main/default/objects/Contrato_Padrao__c/fields/Versao__c.field-meta.xml
<CustomField>
    <fullName>Versao__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Versao do contrato padrao.</description>
    <label>Versao</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>